WT-11444 use 2 algorithms for activity type sync: hashing and using sync_marker