@@ -15,12 +15,13 @@ import static org.mockito.Mockito.reset;
 import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 
-import com.google.common.collect.ImmutableList;
+import com.github.javafaker.Faker;
 import com.google.gson.Gson;
 import com.google.gson.reflect.TypeToken;
 import io.wisetime.connector.api_client.ApiClient;
 import io.wisetime.connector.config.RuntimeConfig;
 import io.wisetime.connector.sql.ConnectorLauncher.SqlConnectorConfigKey;
+import io.wisetime.connector.sql.sync.activity_type.ActivityTypeRecord;
 import io.wisetime.generated.connect.ActivityType;
 import io.wisetime.generated.connect.SyncActivityTypesRequest;
 import io.wisetime.generated.connect.UpsertTagRequest;
@@ -36,6 +37,8 @@ import org.mockito.ArgumentCaptor;
  * @author shane.xie
  */
 class ConnectApiTest {
+
+  private final Faker faker = Faker.instance();
 
   private static ApiClient mockApiClient = mock(ApiClient.class);
   private static ConnectApi connectApi;
@@ -67,7 +70,7 @@ class ConnectApiTest {
   void upsertWiseTimeTags_sends_correct_requests() throws Exception {
     final TagSyncRecord record1 = randomTagSyncRecord();
     final TagSyncRecord record2 = randomTagSyncRecord();
-    final List<TagSyncRecord> tagSyncRecords = ImmutableList.of(record1, record2);
+    final List<TagSyncRecord> tagSyncRecords = List.of(record1, record2);
 
     connectApi.upsertWiseTimeTags(tagSyncRecords);
     ArgumentCaptor<List<UpsertTagRequest>> argument = ArgumentCaptor.forClass(List.class);
@@ -75,7 +78,7 @@ class ConnectApiTest {
 
     final UpsertTagRequest request1 = new UpsertTagRequest()
         .name(record1.getTagName())
-        .additionalKeywords(ImmutableList.of(record1.getAdditionalKeyword()))
+        .additionalKeywords(List.of(record1.getAdditionalKeyword()))
         .metadata(gson.fromJson(record1.getTagMetadata(), new TypeToken<Map<String, String>>() {
         }.getType()))
         .description(record1.getTagDescription())
@@ -84,7 +87,7 @@ class ConnectApiTest {
 
     final UpsertTagRequest request2 = new UpsertTagRequest()
         .name(record2.getTagName())
-        .additionalKeywords(ImmutableList.of(record2.getAdditionalKeyword()))
+        .additionalKeywords(List.of(record2.getAdditionalKeyword()))
         .metadata(gson.fromJson(record2.getTagMetadata(), new TypeToken<Map<String, String>>() {
         }.getType()))
         .description(record2.getTagDescription())
@@ -101,7 +104,7 @@ class ConnectApiTest {
     TagSyncRecord record = randomTagSyncRecord();
     record.setTagDescription(null);
 
-    connectApi.upsertWiseTimeTags(ImmutableList.of(record));
+    connectApi.upsertWiseTimeTags(List.of(record));
 
     ArgumentCaptor<List<UpsertTagRequest>> argument = ArgumentCaptor.forClass(List.class);
     verify(mockApiClient).tagUpsertBatch(argument.capture());
@@ -115,7 +118,7 @@ class ConnectApiTest {
     TagSyncRecord record = randomTagSyncRecord();
     record.setTagDescription("");
 
-    connectApi.upsertWiseTimeTags(ImmutableList.of(record));
+    connectApi.upsertWiseTimeTags(List.of(record));
 
     ArgumentCaptor<List<UpsertTagRequest>> argument = ArgumentCaptor.forClass(List.class);
     verify(mockApiClient).tagUpsertBatch(argument.capture());
@@ -128,18 +131,21 @@ class ConnectApiTest {
   void upsertWiseTimeTags_should_throw_runtime_exception() throws Exception {
     TagSyncRecord record = randomTagSyncRecord();
     doThrow(new IOException()).when(mockApiClient).tagUpsertBatch(anyList());
-    assertThrows(RuntimeException.class, () -> connectApi.upsertWiseTimeTags(ImmutableList.of(record)));
+    assertThrows(RuntimeException.class, () -> connectApi.upsertWiseTimeTags(List.of(record)));
   }
 
   @Test
   void syncActivityTypes() throws Exception {
     final ActivityTypeRecord record = randomActivityTypeRecord();
+    final String syncSessionId = faker.numerify("sync-session-###");
 
-    connectApi.syncActivityTypes(ImmutableList.of(record));
+    connectApi.syncActivityTypes(List.of(record), syncSessionId);
 
     verify(mockApiClient, times(1)).syncActivityTypes(new SyncActivityTypesRequest()
-        .activityTypes(ImmutableList.of(new ActivityType()
+        .syncSessionId(syncSessionId)
+        .activityTypes(List.of(new ActivityType()
             .code(record.getCode())
+            .label(record.getLabel())
             .description(record.getDescription()))));
   }
 }
